fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 
 body{
     font-family: 'Poppins', sans-serif;
+    overflow-x:hidden;
 }
 
 h1, h2, h3, h4, h5{
